product detail page

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,3 +83,11 @@ body {
   padding: 1rem 4rem !important;
   background-color: #fff !important;
 }
+.icon-check {
+  width: 13px;
+  height: 14px !important;
+}
+.icon-hot {
+  width: 30px;
+  height: 26px;
+}
